# aequitas-service

./: CLAUDE.md  Makefile  README.md  pyproject.toml
prompts/: prompts.md
use_cases/recruitment/: requirements.txt
use_cases/recruitment/configs/: kserve.yaml  kserve_container.yaml  kserve_init.sh  mlflow.sh
use_cases/recruitment/docs/: Datasheet.md  ModelCard.md
use_cases/recruitment/metadata/: aipc_local.yaml
use_cases/recruitment/specs/: mission.md  roadmap.md  tech_stack.md
use_cases/recruitment/src/local_platform/: data_preparation.py  modelling.py  operationalization.py  platform_artifacts.py  utils.py
use_cases/recruitment/src/local_platform/artifacts/data/: akkodis.csv
use_cases/recruitment/src/local_platform/artifacts/status/: status.json
use_cases/recruitment/src/local_platform/tests/: test_data_preparation.py
use_cases/recruitment/tests/: test_modelling.py
